# ec2-spot-price

./: .gitignore  README.md  pyproject.toml
img/: demo.yml
src/ec2_spot_price/: __init__.py  ec2_spot_price.py
tests/: test_ec2_spot_price.py
