# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "ec2-spot-price"
version = "0.1.15"
description = "Library and command for retrieving Amazon EC2 spot instance price"
license = "Apache-2.0"
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
# maintainers = 
readme = "README.md"
homepage = "https://github.com/susumuota/ec2_spot_price"
repository = "https://github.com/susumuota/ec2_spot_price"
documentation = "https://github.com/susumuota/ec2_spot_price"
keywords = ["amazon", "aws", "ec2", "spot instance", "price"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
# packages = 
# include =
# exclude =

[tool.poetry.dependencies]
python = "^3.7.1"
boto3 = "^1.17.12"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[tool.poetry.scripts]
ec2_spot_price = 'ec2_spot_price.ec2_spot_price:main'

# [tool.poetry.extras]
# [tool.poetry.plugins]
# [tool.poetry.urls]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
