# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "ec2-spot-price"
version = "0.2.1"
description = "ec2-spot-price: retrieve Amazon EC2 spot instance price"
license = "Apache-2.0"
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
# maintainers = 
readme = "README.md"
homepage = "https://github.com/susumuota/ec2-spot-price"
repository = "https://github.com/susumuota/ec2-spot-price"
documentation = "https://github.com/susumuota/ec2-spot-price"
keywords = ["amazon", "aws", "ec2", "spot instance", "price"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
# packages = 
# include =
# exclude =

[tool.poetry.dependencies]
python = "^3.7.1"
boto3 = "^1.17.12"
pandas = "^1.2.2"
rich = "^9.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
ec2_spot_price = 'ec2_spot_price.ec2_spot_price:main'

# [tool.poetry.extras]
# [tool.poetry.plugins]
# [tool.poetry.urls]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
